--- a/AutionApp/AutionApp.csproj
+++ b/AutionApp/AutionApp.csproj
@@ -26,6 +26,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="PagedList.Core" Version="1.17.4" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.2.4" />
+    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.2.4" />
   </ItemGroup>
 
   <ItemGroup>
